[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Enemy.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/GunEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/weapons/shotgun.png" type="Texture" id=3]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=4]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/tiro.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/bazuca.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2.5 )

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, -20.0, 20.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "spawnBlink"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.5, 12 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
z_index = 5
script = ExtResource( 4 )

[node name="JumpTimer" type="Timer" parent="."]
autostart = true

[node name="fireTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( -1.5, 1.5 )
frames = ExtResource( 1 )
animation = "run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "run"
playback_speed = 5.0
anims/blink = SubResource( 5 )
anims/run = SubResource( 2 )
anims/spawnBlink = SubResource( 6 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( -5, 1 )
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="Gun"]

[node name="HazardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -0.25 )
shape = SubResource( 3 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="tiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="tiro_bazuca" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="fireTimer" to="Gun" method="_on_fireTimer_timeout"]
[connection signal="area_entered" from="HazardArea" to="." method="_on_HazardArea_area_entered"]
